Fix spacing

--- a/source/stylesheets/components/_entry.scss
+++ b/source/stylesheets/components/_entry.scss
@@ -15,8 +15,9 @@
     text-align: center;
   
     h2 {
-      line-height: 1.5;
-      
+      margin: 1rem 0 -0.25rem 0;
+      padding: 0 0 0.25rem 0;
+
       @supports (background-clip: text) or (-webkit-background-clip: text) {
         background: var(--gradient-heading);
         -webkit-background-clip: text;
